# dishka-disnake

./: README.md  pyproject.toml
.github/workflows/: release.yml
dishka_disnake/: __init__.py
dishka_disnake/base/: checkers.py  sign.py  singleton.py
dishka_disnake/commands/: __init__.py  ctx_menus.py  slash.py
dishka_disnake/injection/: __init__.py
dishka_disnake/injector/: __init__.py  wrap.py
dishka_disnake/protocol/: item.py
dishka_disnake/setup/: __init__.py
dishka_disnake/state_management/: __init__.py
dishka_disnake/ui/: __init__.py  base.py  button.py  modal.py
dishka_disnake/ui/select/: __init__.py  channel.py  mentionable.py  role.py  string.py  user.py
