[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dishka-disnake"
version = "0.1.2"
authors = [{name = "kipoha", email = "kipoha.core@gmail.com"}]
description = "Disnake mini library with Dishka integration"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }

dependencies = [
    "dishka>=1.7.2",
    "disnake>=2.11.0",
]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
